intento de hamburguesa

--- a/index.html
+++ b/index.html
@@ -14,18 +14,29 @@
         <h2>header</h2>
       </header>
       <nav class="navbar">
-        <h2>Menu</h2>
+        <h2>Elemento Discreto I</h2>
       </nav>
       <aside class="aside">
-        <h2>Aside</h2>
+        <div class="aside_items" id="_items">
+          <ul class="content">
+            <h3>CONTENIDO</h3>
+            <a href="/"><h4>Logica proposicional</h4></a>
+            <a href=""><h4>Leyes de Inferencia logica</h4></a>
+          </ul>
+        </div>
+        <div class="aside_toggle" id="_toggle">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
       </aside>
-      <main class="main">
-        <img src="/Sin título.png" alt="" />
-      </main>
+      <main class="main"></main>
       <footer class="footer">
         <h2>footer</h2>
       </footer>
       <!-- Colaboracion pública de contenido referente a la carrera de computación FACYT, segun el pensum para estudiantes. -->
+      <!-- https://www.youtube.com/watch?v=TAj12FCafoE 7min -->
     </div>
+    <script src="/script.js"></script>
   </body>
 </html>
