hamburguesa y responsive fase 1 listo

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         <h2>Elemento Discreto I</h2>
       </nav>
       <aside class="aside">
-        <div class="aside_items" id="_items">
-          <h3>CONTENIDO</h3>
-          <ul>
-            <a href="/"><h4>Logica proposicional</h4></a>
-            <a href=""><h4>Leyes de Inferencia logica</h4></a>
-          </ul>
-        </div>
         <div class="aside_toggle" id="_toggle">
           <span></span>
           <span></span>
           <span></span>
+        </div>
+        <div class="aside_items" id="_items">
+          <h3>CONTENIDO</h3>
+          <ul>
+            <a href="/menu.html"><h4>Logica proposicional</h4></a>
+            <a href=""><h4>Leyes de Inferencia logica</h4></a>
+          </ul>
         </div>
       </aside>
       <main class="main"></main>
