Verificar que funcione hamburguesa

--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
       <!-- Colaboracion pública de contenido referente a la carrera de computación FACYT, segun el pensum para estudiantes. -->
       <!-- https://www.youtube.com/watch?v=TAj12FCafoE 7min -->
     </div>
-    <script src="/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
