--- a/index.html
+++ b/index.html
@@ -25,8 +25,61 @@
         <div class="aside_items" id="_items">
           <h3>CONTENIDO</h3>
           <ul>
-            <a href="/menu.html"><h4>Logica proposicional</h4></a>
-            <a href=""><h4>Leyes de Inferencia logica</h4></a>
+            <h3>Unidad I</h3>
+            <a href=""><h4>Logica proposicional</h4></a>
+            <a href=""><h4>Conectivo u operador logico</h4></a>
+            <a href=""><h4>Tabla de verdad</h4></a>
+            <a href=""><h4>Leyes logicas</h4></a>
+            <a href=""><h4>Simplificacion de equivalencias logicas</h4></a>
+            <a href=""><h4>Leyes de inferencia logica</h4></a>
+            <a href=""><h4>Comprobacion de inferencias logicas</h4></a>
+            <a href=""><h4>Esquema proposicional</h4></a>
+            <a href=""><h4>Cuantificadores</h4></a>
+            <a href=""
+              ><h4>Valor de verdad de expresiones con cuantificadores</h4></a
+            >
+            <a href=""><h4>Principios de induccion</h4></a>
+            <a href=""><h4>Base inductiva</h4></a>
+            <a href=""><h4>Tesis inductiva</h4></a>
+            <a href=""><h4>Demostracion inductiva</h4></a>
+          </ul>
+          <ul>
+            <h3>Unidad II</h3>
+            <a href=""><h4>Teoria de conjuntos</h4></a>
+            <a href=""><h4>Por comprension y extension</h4></a>
+            <a href=""><h4>Subconjuntos (contencion)</h4></a>
+            <a href=""><h4>Propios y triviales</h4></a>
+            <a href=""><h4>Diagrama de Venn</h4></a>
+            <a href=""><h4>Conjunto de las partes o potencia</h4></a>
+            <a href=""><h4>Orden o cardinalidad de conjuntos</h4></a>
+            <a href=""><h4>Operacion con conjuntos y Demostraciones</h4></a>
+            <a href=""><h4>Union (Definicion y Propiedades)</h4></a>
+            <a href=""><h4>Interseccion (Definicion y Propiedades)</h4></a>
+            <a href=""><h4>Complemento (Definicion y Propiedades)</h4></a>
+            <a href=""><h4>Diferencia (Definicion y Propiedades)</h4></a>
+            <a href=""><h4>Contraejemplo</h4></a>
+            <a href=""><h4>Igual de conjuntos (Propiedades)</h4></a>
+            <a href=""><h4>Razones (def)//</h4></a>
+            <a href=""><h4>Diferencia simetrica (Propiedades)</h4></a>
+            <a href=""><h4>Particion</h4></a>
+            <a href=""
+              ><h4>Producto cartesiano (Definicion y Propiedades)</h4></a
+            >
+            <a href=""><h4>Resumen de Propiedades y Definiciones</h4></a>
+          </ul>
+          <ul>
+            <h3>Unidad III</h3>
+            <a href=""><h4>Relacion (Composocion de dos conjuntos)</h4></a>
+            <a href=""><h4>Dominio y rango (imagen)</h4></a>
+            <a href=""><h4>Extension, comprension y grafica</h4></a>
+            <a href=""><h4>Relacion reciproca (Def y Propiedades)</h4></a>
+            <a href=""
+              ><h4>Composicion de relaciones (Def y Propiedades)</h4></a
+            >
+          </ul>
+          <ul>
+            <h3>Unidad IV</h3>
+            <a href=""><h4>Combinatoria</h4></a>
           </ul>
         </div>
       </aside>
